--- a/Prj_GrupoDeProdutos/angular.json
+++ b/Prj_GrupoDeProdutos/angular.json
@@ -27,6 +27,7 @@
               }
             ],
             "styles": [
+              "./node_modules/@po-ui/style/css/po-theme-default.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -85,6 +86,7 @@
               }
             ],
             "styles": [
+              "./node_modules/@po-ui/style/css/po-theme-default.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -92,5 +94,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "e3fee3d2-9c83-4add-873c-ad63f6f4a3bf"
   }
 }
