--- a/Prj_GrupoDeProdutos/angular.json
+++ b/Prj_GrupoDeProdutos/angular.json
@@ -27,8 +27,9 @@
               }
             ],
             "styles": [
-              "./node_modules/@po-ui/style/css/po-theme-default.min.css",
-              "src/styles.css"
+              "./node_modules/@totvs/po-theme/css/po-theme-default-variable.min.css",
+              "./node_modules/@totvs/po-theme/css/po-theme-default.min.css",
+              "./node_modules/@po-ui/style/css/po-theme-core.min.css"
             ],
             "scripts": []
           },
@@ -86,8 +87,9 @@
               }
             ],
             "styles": [
-              "./node_modules/@po-ui/style/css/po-theme-default.min.css",
-              "src/styles.css"
+              "./node_modules/@totvs/po-theme/css/po-theme-default-variable.min.css",
+              "./node_modules/@totvs/po-theme/css/po-theme-default.min.css",
+              "./node_modules/@po-ui/style/css/po-theme-core.min.css"
             ],
             "scripts": []
           }
