--- a/Prj_GrupoDeProdutos/package.json
+++ b/Prj_GrupoDeProdutos/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "~19.0.0",
     "@po-ui/ng-components": "^19.11.0",
     "@totvs/po-theme": "^19.11.0",
+    "@totvs/protheus-lib-core": "^19.0.1",
     "rxjs": "~7.8.0",
+    "subsink": "^1.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
